# mcp-youtrack

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/: api-reference.md
scripts/: import-github-issues.py  verify_tools.py
specs/: feat-add-type-field-support.md
src/mcp_youtrack/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_models.py
